--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
-}
+.react-datepicker {
+  font-family: 'Noto Sans KR', serif;
+  padding: 20px 16px;
+  border-radius: 5px;
+  /* border: 1px solid #F0F2F3; */
+  background: #FFF;
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.16);
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .react-datepicker__header {
+    background-color: #fff;
+    border-bottom: none;
+
+    .react-datepicker__day-names {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 40px;
+
+      .react-datepicker__day-name {
+        color: #9C9C9C;
+      }
+      
+    }
+    
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .react-datepicker__day--outside-month {
+    color: #BEBEBE;
   }
-  to {
-    transform: rotate(360deg);
+
+  .react-datepicker__triangle {
+    display: none;
   }
 }
